# Urban_Homeworks

./: .gitignore
Telegram_bot_01/: config.py  database.db  db.py  keyboards.py  main.py  texts.py
module_10/: homework_10_1.py  homework_10_2.py  homework_10_5.py
module_11/: homework_11_1.py  homework_11_3.py
module_13/: homework_13_1.py  homework_13_2.py  homework_13_3.py  homework_13_4.py  homework_13_5.py  homework_13_6.py
module_13/T_bot_01/: texts.py
module_14/: crud_functions.py  homework_14_1.db  homework_14_1.py  homework_14_2.db  homework_14_2.py  homework_14_3.py  homework_14_4.py  homework_14_5.py  lesson_1.db  lesson_1.py  products.db
module_16/: homework_16_1.py  homework_16_2.py  homework_16_3.py  homework_16_4.py  lesson_1.py  lesson_2.py  requirements.txt  test.py
module_16/homework_16_5/: main.py
module_16/homework_16_5/templates/: users.html
module_16/lesson_16_5/: main.py
module_16/lesson_16_5/templates/: message.html
module_17/: pyproject.toml
module_17/homework_17_1/: pyproject.toml
module_17/homework_17_2/: homework_17_2.code-workspace  pyproject.toml
module_17/homework_17_2/app/models/: task.py
module_17/homework_17_3/: pyproject.toml  taskmanager.db
module_17/homework_17_3/app/: main.py
module_17/homework_17_3/app/migrations/: env.py
module_17/homework_17_3/app/migrations/versions/: e397b1f26959_initial_migration.py
module_17/homework_17_3/app/models/: task.py  user.py
module_17/homework_17_4/: pyproject.toml  taskmanager.db
module_17/homework_17_4/app/: main.py
module_17/homework_17_4/app/backend/: db.py
module_17/homework_17_4/app/migrations/versions/: 21887b1d0925_initial_migration.py
module_17/homework_17_4/app/routers/: user.py
module_17/homework_17_5/: pyproject.toml
module_17/homework_17_5/src/homework_17_5/: taskmanager.db
module_17/homework_17_5/src/homework_17_5/app/migrations/versions/: 469744c35731_initial_migration.py
module_17/homework_17_5/src/homework_17_5/app/models/: task.py  user.py
module_17/homework_17_5/src/homework_17_5/app/routers/: task.py  user.py
module_17/lesson_17/: ecommerce.db  lesson_17.code-workspace  pyproject.toml
module_17/lesson_17/app/: main.py  schemas.py
module_17/lesson_17/app/backend/: db.py
module_17/lesson_17/app/migrations/versions/: 526024edd48b_initial_migration.py
module_17/lesson_17/app/models/: category.py  products.py
module_17/lesson_17/app/routers/: category.py
module_17/src/module_17/homework_17_1/app/: main.py
module_17_bak/: pyproject.toml
module_17_bak/src/module_17/lesson_17/app/models/: category.py  products.py
module_17_bak/src/module_17/lesson_17/app/routers/: category.py
module_18/lesson_18/: pyproject.toml
module_18/lesson_18/src/lesson_18/myapp/myapp/: settings.py
module_6/: homework_6_1.py
