[tool.poetry]
name = "module-17"
version = "0.1.0"
description = ""
authors = ["Vladimir Kolesnikov <vk.coworking@gmail.com>"]
readme = "README.md"
packages = [{include = "module_17", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.7"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
