[tool.poetry]
name = "lesson-17"
version = "0.1.0"
description = "Урок по fastApi"
authors = ["Vladimir Kolesnikov <vk.coworking@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
