[tool.poetry]
name = "lesson-18"
version = "0.1.0"
description = ""
authors = ["Vladimir Kolesnikov <vk.coworking@gmail.com>"]
readme = "README.md"
packages = [{include = "lesson_18", from = "src"}]

[tool.poetry.dependencies]
python = "3.12.7"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
